kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener-api
  template:
    metadata:
      labels:
        app: url-shortener-api
    spec:
      containers:
        - name: api
          image: cloudurlshortacr.azurecr.io/url-shortener-api:v1
          ports:
            - containerPort: 8000
