kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-shortener-frontend
  template:
    metadata:
      labels:
        app: url-shortener-frontend
    spec:
      containers:
      - name: frontend
        image: cloudurlshortacr.azurecr.io/url-shortener-frontend:v2
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-frontend
spec:
  selector:
    app: url-shortener-frontend
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
