kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-api-service
spec:
  selector:
    app: url-shortener-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
